--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -118,6 +118,9 @@ jobs:
     name: Documentation
     runs-on: ubuntu-latest
     
+    env:
+      MIX_ENV: dev
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
