--- a/.github/workflows/phony_validation.yml
+++ b/.github/workflows/phony_validation.yml
@@ -28,6 +28,7 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: ${{ matrix.go-version }}
+        cache: false
 
     - name: Download dependencies
       working-directory: examples/${{ matrix.example }}
@@ -78,6 +79,7 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.22'
+        cache: false
 
     - name: Validate all regenerated examples
       run: |
