--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -107,3 +107,46 @@ jobs:
       - name: Run Credo
         run: mix credo --strict
         continue-on-error: true
+  
+  docs:
+    name: Documentation
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Setup Elixir
+        uses: erlef/setup-beam@v1
+        with:
+          elixir-version: '1.16'
+          otp-version: '26'
+      
+      - name: Cache dependencies
+        uses: actions/cache@v4
+        with:
+          path: |
+            deps
+            _build
+          key: ${{ runner.os }}-mix-docs-${{ hashFiles('**/mix.lock') }}
+      
+      - name: Install dependencies
+        run: mix deps.get
+      
+      - name: Generate sequence diagrams
+        run: mix test --only diagram_generation
+      
+      - name: Build documentation
+        run: mix docs
+      
+      - name: Upload diagrams
+        uses: actions/upload-artifact@v4
+        with:
+          name: sequence-diagrams
+          path: test/output/*.html
+      
+      - name: Upload documentation
+        uses: actions/upload-artifact@v4
+        with:
+          name: documentation
+          path: doc/
