fix vligo and remove unnecessary artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,9 @@
 /doc/vlingo_generator.html
 /doc/404.html
 
+# ExDoc build manifest
+/doc/.build
+
 # But DO track GitHub Pages examples
 !/doc/examples/
 !/doc/index.html
