--- a/examples/omnetpp_loadbalanced/omnetpp.ini
+++ b/examples/omnetpp_loadbalanced/omnetpp.ini
@@ -3,8 +3,9 @@ network = LoadBalancedSystem
 sim-time-limit = 60s
 
 # Logging
-**.cmdenv-express-mode = true
-**.cmdenv-status-frequency = 1s
+cmdenv-express-mode = true
+cmdenv-autoflush = true
+cmdenv-status-frequency = 1s
 
-# Random number generation
-seed-0-mt = 42
+# Random seed
+seed-set = 0
