--- a/examples/omnetpp_burst/omnetpp.ini
+++ b/examples/omnetpp_burst/omnetpp.ini
@@ -3,8 +3,9 @@ network = BurstNetwork
 sim-time-limit = 30s
 
 # Logging
-**.cmdenv-express-mode = true
-**.cmdenv-status-frequency = 1s
+cmdenv-express-mode = true
+cmdenv-autoflush = true
+cmdenv-status-frequency = 1s
 
-# Random number generation
-seed-0-mt = 42
+# Random seed
+seed-set = 0
