--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,6 +98,14 @@ jobs:
             _build
           key: ${{ runner.os }}-mix-quality-${{ hashFiles('**/mix.lock') }}
       
+      - name: Cache Dialyzer PLTs
+        uses: actions/cache@v4
+        with:
+          path: priv/plts
+          key: ${{ runner.os }}-dialyzer-1.16-26-${{ hashFiles('**/mix.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-dialyzer-1.16-26-
+      
       - name: Install dependencies
         run: mix deps.get
       
@@ -107,6 +115,9 @@ jobs:
       - name: Run Credo
         run: mix credo --strict
         continue-on-error: true
+      
+      - name: Run Dialyzer
+        run: mix dialyzer --format github
   
   docs:
     name: Documentation
