--- a/.gitignore
+++ b/.gitignore
@@ -1,73 +1,257 @@
-# The directory Mix will write compiled artifacts to.
-/_build/
+# Created by https://www.toptal.com/developers/gitignore/api/conan,c++,elixir,visualstudiocode,java,intellij+all,maven,gradle
+# Edit at https://www.toptal.com/developers/gitignore?templates=conan,c++,elixir,visualstudiocode,java,intellij+all,maven,gradle
 
-# If you run "mix test --cover", coverage assets end up here.
-/cover/
+### C++ ###
+# Prerequisites
+*.d
 
-# The directory Mix downloads your dependencies sources to.
-/deps/
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
 
-# Where third-party dependencies like ExDoc output generated docs.
-# Ignore ExDoc generated files but keep examples for GitHub Pages
-/doc/*.html
-/doc/*.epub
-/doc/dist/
-/doc/ActorSimulation*.html
-/doc/DiningPhilosophers.html
-/doc/GenServerVirtualTime*.html
-/doc/Mix.*.html
-/doc/RealTimeBackend.html
-/doc/TimeBackend.html
-/doc/VirtualClock.html
-/doc/VirtualTimeBackend.html
-/doc/VirtualTimeGenServer.html
-/doc/api-reference.html
-/doc/caf_generator.html
-/doc/generators.html
-/doc/implementation_summary.html
-/doc/omnetpp_generator.html
-/doc/phony_generator.html
-/doc/pony_generator.html
-/doc/readme.html
-/doc/search.html
-/doc/vlingo_generator.html
-/doc/404.html
+# Precompiled Headers
+*.gch
+*.pch
 
-# ExDoc build manifest
-/doc/.build
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
 
-# But DO track GitHub Pages examples
-!/doc/examples/
-!/doc/index.html
+# Fortran module files
+*.mod
+*.smod
 
-# Ignore .fetch files in case you like to edit your project deps locally.
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
+
+### Conan ###
+# Conan build information
+conan.lock
+conanbuildinfo.*
+conaninfo.txt
+graph_info.json
+
+## Various built-in generators
+# cmake_find_package generator https://docs.conan.io/en/latest/reference/generators/cmake_find_package.html
+Find*.cmake
+
+# cmake_paths generator https://docs.conan.io/en/1.4/integrations/cmake/cmake_paths_generator.html
+conan_paths.*
+
+# Environment activation scripts produced by https://docs.conan.io/en/latest/mastering/virtualenv.html#virtualenv-generator
+activate_run.ps1
+activate_run.sh
+deactivate_run.ps1
+deactivate_run.sh
+environment_run.ps1.env
+environment_run.sh.env
+
+### Elixir ###
+/_build
+/cover
+/deps
+/doc
 /.fetch
-
-# If the VM crashes, it generates a dump, let's ignore it too.
 erl_crash.dump
-
-# Also ignore archive artifacts (built via "mix archive.build").
 *.ez
-
-# Ignore package tarball (built via "mix hex.build").
-gen_server_virtual_time-*.tar
-*.tar
-hex_metadata.config
-
-# Temporary files, for example, from tests.
-/tmp/
-
-# IDE files
+*.beam
+/config/*.secret.exs
 .elixir_ls/
-.vscode/
-.idea/
-
-# OS files
-.DS_Store
 
 # Dialyzer PLT files
-/priv/plts/*.plt
-/priv/plts/*.plt.hash
+/priv/plts/
+
+### Elixir Patch ###
+
+### Intellij+all ###
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
+# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+
+# User-specific stuff
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/**/dictionaries
+.idea/**/shelf
+
+# AWS User-specific
+.idea/**/aws.xml
+
+# Generated files
+.idea/**/contentModel.xml
+
+# Sensitive or high-churn files
+.idea/**/dataSources/
+.idea/**/dataSources.ids
+.idea/**/dataSources.local.xml
+.idea/**/sqlDataSources.xml
+.idea/**/dynamic.xml
+.idea/**/uiDesigner.xml
+.idea/**/dbnavigator.xml
+
+# Gradle
+.idea/**/gradle.xml
+.idea/**/libraries
+
+# Gradle and Maven with auto-import
+# When using Gradle or Maven with auto-import, you should exclude module files,
+# since they will be recreated, and may cause churn.  Uncomment if using
+# auto-import.
+# .idea/artifacts
+# .idea/compiler.xml
+# .idea/jarRepositories.xml
+# .idea/modules.xml
+# .idea/*.iml
+# .idea/modules
+# *.iml
+# *.ipr
+
+# CMake
+cmake-build-*/
+
+# Mongo Explorer plugin
+.idea/**/mongoSettings.xml
+
+# File-based project format
+*.iws
+
+# IntelliJ
+out/
+
+# mpeltonen/sbt-idea plugin
+.idea_modules/
+
+# JIRA plugin
+atlassian-ide-plugin.xml
+
+# Cursive Clojure plugin
+.idea/replstate.xml
+
+# SonarLint plugin
+.idea/sonarlint/
+
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+fabric.properties
+
+# Editor-based Rest Client
+.idea/httpRequests
+
+# Android studio 3.1+ serialized cache file
+.idea/caches/build_file_checksums.ser
+
+### Intellij+all Patch ###
+# Ignore everything but code style settings and run configurations
+# that are supposed to be shared within teams.
+
+.idea/*
+
+!.idea/codeStyles
+!.idea/runConfigurations
+
+### Java ###
+# Compiled class file
+*.class
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+replay_pid*
+
+### Maven ###
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+# https://github.com/takari/maven-wrapper#usage-without-binary-jar
+.mvn/wrapper/maven-wrapper.jar
+
+# Eclipse m2e generated files
+# Eclipse Core
+.project
+# JDT-specific (Eclipse Java Development Tools)
+.classpath
+
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+.ionide
+
+### Gradle ###
+.gradle
+**/build/
+!src/**/build/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Avoid ignore Gradle wrappper properties
+!gradle-wrapper.properties
+
+# Cache of project
+.gradletasknamecache
+
+# Eclipse Gradle plugin generated files
+# Eclipse Core
+# JDT-specific (Eclipse Java Development Tools)
+
+### Gradle Patch ###
+# Java heap dump
+*.hprof
+
+# End of https://www.toptal.com/developers/gitignore/api/conan,c++,elixir,visualstudiocode,java,intellij+all,maven,gradle
 
 # Environment variables
 .env
@@ -82,3 +266,5 @@ _build/test/lib/*/test-junit-report.xml
 # (we want to track the generated HTML files to show diagram progression)
 # test/output/*
 # !test/output/README.md
+*.tar.gz
+*.tar
