--- a/vlingo_loadbalanced_generated/pom.xml
+++ b/vlingo_loadbalanced_generated/pom.xml
@@ -52,8 +52,10 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.11.0</version>
         <configuration>
-          <source>11</source>
-          <target>11</target>
+          <release>11</release>
+          <compilerArgs>
+            <arg>-Xlint:unchecked</arg>
+          </compilerArgs>
         </configuration>
       </plugin>
 
