--- a/.github/workflows/test-and-deploy-diagrams.yml
+++ b/.github/workflows/test-and-deploy-diagrams.yml
@@ -56,7 +56,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: examples-site
-          path: doc/examples
+          path: generated/examples
           retention-days: 7
           if-no-files-found: error
 
