--- a/.github/workflows/test-and-deploy-diagrams.yml
+++ b/.github/workflows/test-and-deploy-diagrams.yml
@@ -59,11 +59,22 @@ jobs:
           cp generated/examples/dining_*.html generated/examples/reports/ || true
           echo "✅ Copied sequence diagrams to reports directory"
 
+      - name: Build documentation
+        run: mix docs
+
       - name: Upload all examples artifacts
         uses: actions/upload-artifact@v4
         with:
           name: examples-site
           path: generated/examples
+          retention-days: 7
+          if-no-files-found: error
+      
+      - name: Upload documentation artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: doc-site
+          path: doc
           retention-days: 7
           if-no-files-found: error
 
@@ -80,6 +91,12 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     
     steps:
+      - name: Download documentation
+        uses: actions/download-artifact@v4
+        with:
+          name: doc-site
+          path: public
+
       - name: Download examples site
         uses: actions/download-artifact@v4
         with:
