Fix callback messages: Publishers say 'Sending', Receivers say 'Received'
- Updated all generators (Pony, CAF, Phony, VLINGO)
- Publishers with send_pattern: 'Sending'
- Receivers without send_pattern: 'Received'
- Fix grammar: 'sends' not 'sendings'
- Regenerated all examples
- All tests passing (188 tests, 0 failures)

--- a/.gitignore
+++ b/.gitignore
@@ -268,3 +268,22 @@ _build/test/lib/*/test-junit-report.xml
 # !test/output/README.md
 *.tar.gz
 *.tar
+
+# Generated binaries from example builds
+# Pattern: {example}.{framework}.{os} (e.g. pubsub.pony.darwin, burst.caf.linux)
+*.pony.darwin
+*.pony.linux
+*.phony.darwin
+*.phony.linux
+*.caf.darwin
+*.caf.linux
+*.omnetpp.darwin
+*.omnetpp.linux
+*.vlingo.darwin
+*.vlingo.linux
+# Windows binaries
+*.pony.exe
+*.phony.exe
+*.caf.exe
+*.omnetpp.exe
+*.vlingo.exe
