--- a/examples/phony_pipeline/Makefile
+++ b/examples/phony_pipeline/Makefile
@@ -1,19 +1,29 @@
 # Generated from ActorSimulation DSL
 # Makefile for pipeline_actors
 
+# Binary naming: {example}.phony.{os}
+UNAME_S := $(shell uname -s | tr '[:upper:]' '[:lower:]')
+ifeq ($(UNAME_S),darwin)
+    BINARY := pipeline_actors.phony.darwin
+else ifeq ($(UNAME_S),linux)
+    BINARY := pipeline_actors.phony.linux
+else
+    BINARY := pipeline_actors.phony.exe
+endif
+
 .PHONY: build test clean run
 
 build:
-	go build -o pipeline_actors .
+	go build -o $(BINARY) .
 
 test:
 	go test -v ./...
 
 clean:
-	rm -f pipeline_actors
+	rm -f $(BINARY) pipeline_actors.phony.* pipeline_actors
 
 run: build
-	./pipeline_actors
+	./$(BINARY)
 
 deps:
 	go mod download
