--- a/examples/phony_pubsub/Makefile
+++ b/examples/phony_pubsub/Makefile
@@ -1,19 +1,29 @@
 # Generated from ActorSimulation DSL
 # Makefile for pubsub_actors
 
+# Binary naming: {example}.phony.{os}
+UNAME_S := $(shell uname -s | tr '[:upper:]' '[:lower:]')
+ifeq ($(UNAME_S),darwin)
+    BINARY := pubsub_actors.phony.darwin
+else ifeq ($(UNAME_S),linux)
+    BINARY := pubsub_actors.phony.linux
+else
+    BINARY := pubsub_actors.phony.exe
+endif
+
 .PHONY: build test clean run
 
 build:
-	go build -o pubsub_actors .
+	go build -o $(BINARY) .
 
 test:
 	go test -v ./...
 
 clean:
-	rm -f pubsub_actors
+	rm -f $(BINARY) pubsub_actors.phony.* pubsub_actors
 
 run: build
-	./pubsub_actors
+	./$(BINARY)
 
 deps:
 	go mod download
